pod-security-vpol/baseline/disallow-selinux/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01-new
spec:
  initContainers:
  - name: busybox01-init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: spc_t
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02-new
spec:
  securityContext:
    seLinuxOptions:
      user: "1000"
      role: "foo"
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03-new
spec:
  securityContext:
    seLinuxOptions:
      type: spc_t
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04-new
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05-new
spec:
  initContainers:
  - name: busybox-init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: "1000"
        role: "foo"
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06-new
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: "1000"
        role: "foo"
        type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    seLinuxOptions:
      type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: spc_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: spc_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: spc_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    seLinuxOptions:
      user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    seLinuxOptions:
      role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    seLinuxOptions:
      user: sysadm_u
      role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod06
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
        role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod07
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod08
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod09
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
        role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod10
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: unconfined_t
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod11
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod12
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        role: sysadm_r
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod13
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
        role: sysadm_r
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod14
spec:
  initContainers:
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod15
spec:
  initContainers:
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        role: sysadm_r
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod16
spec:
  initContainers:
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
        role: sysadm_r
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod17
spec:
  initContainers:
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        user: sysadm_u
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
