pod-security-vpol/baseline/disallow-selinux/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-new
spec:
  initContainers:
  - name: busybox01-init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-new
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03-new
spec:
  securityContext:
    seLinuxOptions:
      type: container_init_t
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04-new
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05-new
spec:
  securityContext:
    seLinuxOptions:
      type: container_engine_t
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06-new
spec:
  initContainers:
  - name: busybox01-init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_engine_t
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_engine_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    seLinuxOptions:
      type: container_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    seLinuxOptions:
      type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    seLinuxOptions:
      type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod11
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod12
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod13
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod14
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_init_t
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    seLinuxOptions:
      level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
        level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod06
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod07
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod08
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod09
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
        type: container_t
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod10
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod11
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        type: container_t
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
